--- a/code/20210413-AlphaBeta/makefile
+++ b/code/20210413-AlphaBeta/makefile
@@ -1,8 +1,7 @@
 default:
 	@cat makefile
 	
-all: populate_scenarios simulate plot
-
+all: populate_scenarios simulate plot upload
 
 populate_scenarios:
 	. ../venv/*/activate && cd python && python populate_scenarios.py
@@ -13,4 +12,5 @@ simulate:
 plot:
 	. ../venv/*/activate && cd python && python plot.py
 
-
+upload:
+	git commit scenarios results python/plot -m "rerun" && git push
