--- a/code/20210413-AlphaBeta/makefile
+++ b/code/20210413-AlphaBeta/makefile
@@ -16,10 +16,10 @@ plot:
 	git add python/plot/*
 
 chkp_new:
-	d=checkpoint/$$(date +"%Y%m%d-%H%M%S"); mkdir $$d && cp -r *.sbproj simulate.m scenarios results python/plot  $$d/;
+	d=checkpoint/$$(date +"%Y%m%d-%H%M%S"); mkdir $$d && cp -r *.sbproj model.html *.m scenarios results python/plot $$d/; echo "$$d<br><a href='model.html'>base model</a>, <a href='scenarios/index.html'>scenarios</a>, <a href='plot/index.html'>figures</a><br>" > $$d/index.html; git add $$d && git commit $$d -m "$$d" && git commit . -m "checkpoint" && git log -n 1 --pretty=format:"<a href='https://github.com/numpde/nct1/tree/%H/$$(dirname $$(git ls-files --full-name | head -n 1))'>permalink</a><br>" >> $$d/index.html;
 
 chkp_index:
-	cd checkpoint; echo > index.html; for i in 2021*; do echo "<a href='$$i/scenarios/index.html'>$$i</a>: <a href='$$i/plot/index.html'>figures</a> <br>" >> index.html; done
+	cd checkpoint; echo > index.html; for i in 2021*; do echo "<a href='$$i'>$$i</a><br>" >> index.html; done; git commit index.html -m "checkpoint index";
 
 upload:
 	git commit alpha_beta.sbproj *.m python/*.py -m "iteration" || true
@@ -27,3 +27,4 @@ upload:
 	git add checkpoint/* || true
 	git commit checkpoint -m "checkpoint" || true
 	git push || git push || git push
+
